--- a/index.html
+++ b/index.html
@@ -2,43 +2,96 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Tip calculator app</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
+  <header>
+    <img src="images/logo.svg" alt="SPLITTER - The Tip Calculator App">
+  </header>
+  <main>
+    <div class="calculator">
+      <form class="operation" action="">
+        <div class="bill">
+          <label for="bill" class="operation-label">Bill</label>
+          <span>
+            <input type="number" name="bill" id="bill" placeholder="0" min="0">
+          </span>
+        </div>
+        <div class="tip">
+          <label for="" class="operation-label">Select Tip %</label>
+          <div class="tip-percentages">
+            <div class="tip-percentage">
+              <input type="radio" name="tip-selection" id="tip-5" value="5">
+              <label for="tip-5">5%</label> 
+            </div>
+            <div class="tip-percentage">
+              <input type="radio" name="tip-selection" id="tip-10" value="10">
+              <label for="tip-10">10%</label>             
+            </div>
+            <div class="tip-percentage">
+              <input type="radio" name="tip-selection" id="tip-15" value="15">
+              <label for="tip-15">15%</label>             
+            </div>
+            <div class="tip-percentage">
+              <input type="radio" name="tip-selection" id="tip-25" value="25">
+              <label for="tip-25">25%</label>            
+            </div>
+            <div class="tip-percentage">
+              <input type="radio" name="tip-selection" id="tip-50" value="50">
+              <label for="tip-50">50%</label>            
+            </div>
+            <div class="tip-percentage">
+              <input type="number" name="tip-custom" id="tip-custom" placeholder="Custom" min="0" >
+            </div>
+          </div>          
+        </div>
+        <div class="number-people">
+          <label for="number-people-input" class="operation-label">Number of People</label>
+          <span>
+            <input type="number" name="number-people-input" id="number-people-input" placeholder="0" min="0" step="1">
+          </span>
+        </div>
+      </form>
+      <div class="result">
+        <div class="result-display">
+          <div class="tip-amount">
+            <div class="result-label">
+              Tip Amount
+              <br><span>/ person</span>      
+            </div>
+            <div class="result-number">
+              $0.00
+            </div>
+          </div>
+          <div class="total">
+            <div class="result-label">
+              Total
+              <br><span>/ person</span>
+            </div>            
+            <div class="result-number">
+              $0.00
+            </div>          
+          </div>
+        </div>
+        <div class="reset">
+          <button class="reset-btn" disabled>RESET</button>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="http://www.moussamamadou.com">Moussa Mamadou</a>.
+    </div>
+  </footer>
 
-  Bill
-
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
-
-  Number of People
-
-  Tip Amount
-  / person
-
-  Total
-  / person
-
-  Reset
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
