--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Tip calculator app</title>
-
   <style>
   </style>
 </head>
@@ -17,47 +15,54 @@
   </header>
   <main>
     <div class="calculator">
-      <form class="operation" action="">
+      <form id="operation" class="operation" action="" method="get">
         <div class="bill">
-          <label for="bill" class="operation-label">Bill</label>
-          <span>
-            <input type="number" name="bill" id="bill" placeholder="0" min="0">
+          <div class="label-wrapper">
+            <label for="bill" class="operation-label">Bill</label>
+          </div>
+          <span class="input-wrapper">
+            <input type="number" name="bill" id="bill" placeholder="0" min="0" >
           </span>
         </div>
         <div class="tip">
-          <label for="" class="operation-label">Select Tip %</label>
+          <div class="label-wrapper">
+            <label for="tip-selection" class="operation-label">Select Tip %</label>
+          </div>
           <div class="tip-percentages">
             <div class="tip-percentage">
-              <input type="radio" name="tip-selection" id="tip-5" value="5">
-              <label for="tip-5">5%</label> 
+              <input type="radio" name="tip-selection" id="tip-0" value="5">
+              <label for="tip-0">5%</label> 
             </div>
             <div class="tip-percentage">
-              <input type="radio" name="tip-selection" id="tip-10" value="10">
-              <label for="tip-10">10%</label>             
+              <input type="radio" name="tip-selection" id="tip-1" value="10">
+              <label for="tip-1">10%</label>             
             </div>
             <div class="tip-percentage">
-              <input type="radio" name="tip-selection" id="tip-15" value="15">
-              <label for="tip-15">15%</label>             
+              <input type="radio" name="tip-selection" id="tip-2" value="15">
+              <label for="tip-2">15%</label>             
             </div>
             <div class="tip-percentage">
-              <input type="radio" name="tip-selection" id="tip-25" value="25">
-              <label for="tip-25">25%</label>            
+              <input type="radio" name="tip-selection" id="tip-3" value="25">
+              <label for="tip-3">25%</label>            
             </div>
             <div class="tip-percentage">
-              <input type="radio" name="tip-selection" id="tip-50" value="50">
-              <label for="tip-50">50%</label>            
+              <input type="radio" name="tip-selection" id="tip-4" value="50">
+              <label for="tip-4">50%</label>            
             </div>
             <div class="tip-percentage">
-              <input type="number" name="tip-custom" id="tip-custom" placeholder="Custom" min="0" >
+              <input type="number" name="tip-custom" id="tip-custom" placeholder="Custom" min="0" value='' >
             </div>
           </div>          
         </div>
         <div class="number-people">
-          <label for="number-people-input" class="operation-label">Number of People</label>
-          <span>
+          <div class="label-wrapper">
+            <label for="number-people-input" class="operation-label">Number of People</label>
+          </div>
+          <span class="input-wrapper">
             <input type="number" name="number-people-input" id="number-people-input" placeholder="0" min="0" step="1">
           </span>
         </div>
+<!--         <input type="submit" value="Submit"> -->
       </form>
       <div class="result">
         <div class="result-display">
@@ -81,17 +86,17 @@
           </div>
         </div>
         <div class="reset">
-          <button class="reset-btn" disabled>RESET</button>
+          <button class="reset-btn" id="reset-btn" disabled>RESET</button>
         </div>
       </div>
     </div>
   </main>
   <footer>
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Challenge by <a href="https://www.frontendmentor.io/challenges/tip-calculator-app-ugJNGbJUX" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="http://www.moussamamadou.com">Moussa Mamadou</a>.
     </div>
   </footer>
-
+  <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
